# AudioNormalizer

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  app.py  utils.py
app/core/: utils.py
app/gui/: app.py  utils.py
app/gui/controllers/: start_controller.py  start_screen_controller.py
app/gui/ui/: start_screen_ui.py  start_ui.py
app/resources/: favicon.icns
