[tool.poetry]
name = "AudioNormalizer"
version = "0.1.4"
description = "A user-friendly GUI application for batch audio normalization, allowing you to process large numbers of files quickly and efficiently."
authors = ["Enetz Quindimil <enetzquindimil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = ">=6.9.1"
pydub = ">=0.25.1"
toml = "^0.10"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"